# abeliansandpile

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: colors.rs  grid.rs  main.rs  point.rs
