[package]
name = "abeliansandpile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
rand = "0.8.5"
rustc-hash = "2.0.0"

[[bin]]
edition = "2021"
name = "abeliansandpile"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"