[package]
name = "abeliansandpile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.5"
rand = "0.9.1"
rustc-hash = "2.1.0"

[[bin]]
name = "abeliansandpile"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"