[package]
name = "abeliansandpile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.8"
rand = "0.9.2"
rustc-hash = "2.1.1"

[[bin]]
name = "abeliansandpile"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"